# QuickMovie

./: .dockerignore  .env.development  .env.development.client  .env.production  .env.tauri  .gitignore  .z-ai-config  Dockerfile  LICENSE  README.md  TestAccount.json  db.json  docker-compose.yml  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  worklog.md
.claude/: settings.json
.github/workflows/: build.yml  ci.yml
db/: custom.db
docker/: README.txt  nginx.conf  start.sh
prisma/: schema.prisma  seed.ts
prisma/db/: custom.db
scripts/: build-check.js  test-ai.ts
server/: package-lock.json  package.json
server/data/: quickmovie.db-shm  quickmovie.db-wal
server/src/: db.ts  index.ts
skills/blog-writer/: 2025-11-12-why-ai-art-is-useless.md
skills/finance/: Finance_API_Doc.md
skills/interview-designer/: README.md
skills/seo-content-writer/: SKILL.md
skills/storyboard-manager/: SKILL.md  package.json
skills/web-shader-extractor/: SKILL.md
skills/writing-plans/: SKILL.md
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: error-boundary.tsx  icon-picker.tsx  image-cropper.tsx  mode-switch-dialog.tsx  offline-indicator.tsx  settings-dialog.tsx
src/hooks/: use-app-mode.ts  use-collaboration.ts
src/lib/: ai-assistant-store.ts  ai-prompts.ts  ai-service.ts  api.ts  auth.ts  encryption.ts  env.ts  localStore.ts  offlineAdapter.ts  quantumEncryption.ts  store.ts  (+1 more)
(+63 files in other folders)
